# kozue

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pages.yml
crates/kozue-cli/: Cargo.toml
crates/kozue-cli/src/: main.rs
crates/kozue-cli/tests/: integration.rs
crates/kozue-dsl/: Cargo.toml
crates/kozue-dsl/src/: class_dsl.rs  er_dsl.rs  lib.rs
crates/kozue-ir/: Cargo.toml
crates/kozue-ir/src/: lib.rs
crates/kozue-layout/: Cargo.toml
crates/kozue-layout/src/: bounds.rs  boxes.rs  class.rs  contract.rs  coords.rs  cycle.rs  er.rs  layering.rs  lib.rs  markers.rs  ordering.rs  semantic.rs  sequence.rs  state.rs
crates/kozue-lsp/: Cargo.toml
crates/kozue-lsp/src/: lib.rs  main.rs  position.rs
crates/kozue-mermaid/: Cargo.toml
crates/kozue-mermaid/src/: features.rs  lib.rs
crates/kozue-plantuml/: Cargo.toml
crates/kozue-plantuml/src/: features.rs  lib.rs
crates/kozue-render-dot/: Cargo.toml
crates/kozue-render-dot/src/: lib.rs
crates/kozue-render-drawio/: Cargo.toml
crates/kozue-render-drawio/src/: lib.rs
crates/kozue-render-excalidraw/: Cargo.toml
crates/kozue-render-excalidraw/src/: lib.rs
crates/kozue-render-png/: Cargo.toml
crates/kozue-render-png/src/: lib.rs
crates/kozue-render-pptx/: Cargo.toml
crates/kozue-render-pptx/src/: lib.rs  templates.rs  zip.rs
crates/kozue-render-svg/: Cargo.toml
crates/kozue-render-svg/src/: lib.rs
crates/kozue-render-term/: Cargo.toml
crates/kozue-render-term/src/: lib.rs
crates/kozue-text/: Cargo.toml
crates/kozue-text/src/: lib.rs
crates/kozue-wasm/: Cargo.toml  demo.html
crates/kozue-wasm/src/: lib.rs
docs/: roadmadp.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/src/: extension.ts
examples/: hello.kzd
tests/excalidraw-render/: .gitignore  README.md  build.mjs  dom-env.mjs  package-lock.json  package.json  render.mjs  verify.test.mjs
tests/golden/: branch.dot  branch.drawio  branch.excalidraw  branch.kzd  branch.pptx  branch.txt  chain.dot  chain.drawio  chain.excalidraw  chain.kzd  chain.pptx  chain.txt  class_basic.dot  class_basic.drawio  class_basic.excalidraw  class_basic.kzd  class_basic.pptx  class_basic.txt  cycle.dot  cycle.kzd  edge_presentation.dot  edge_presentation.drawio  edge_presentation.excalidraw  edge_presentation.kzd  edge_presentation.pptx  edge_presentation.txt  er_basic.dot  er_basic.drawio  er_basic.excalidraw  er_basic.kzd  er_basic.pptx  er_basic.txt  mermaid_class.mmd  mermaid_er.mmd  mermaid_flow.mmd  mermaid_flow.txt  mermaid_seq.mmd  mermaid_seq_activation.mmd  mermaid_seq_actor.mmd  mermaid_seq_arrows.mmd  (+87 more)
