[workspace]
resolver = "2"
members = [
    "crates/kozue-ir",
    "crates/kozue-text",
    "crates/kozue-layout",
    "crates/kozue-render-svg",
    "crates/kozue-render-term",
    "crates/kozue-dsl",
    "crates/kozue-mermaid",
    "crates/kozue-plantuml",
    "crates/kozue-cli",
    "crates/kozue-render-png",
    "crates/kozue-render-drawio",
    "crates/kozue-render-dot",
    "crates/kozue-wasm",
    "crates/kozue-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
kozue-ir = { path = "crates/kozue-ir" }
kozue-text = { path = "crates/kozue-text" }
kozue-layout = { path = "crates/kozue-layout" }
kozue-render-svg = { path = "crates/kozue-render-svg" }
kozue-render-term = { path = "crates/kozue-render-term" }
kozue-dsl = { path = "crates/kozue-dsl" }
kozue-mermaid = { path = "crates/kozue-mermaid" }
kozue-plantuml = { path = "crates/kozue-plantuml" }
kozue-render-png = { path = "crates/kozue-render-png" }
kozue-render-drawio = { path = "crates/kozue-render-drawio" }
kozue-render-dot = { path = "crates/kozue-render-dot" }
tiny-skia = "0.11"

chumsky = "0.9"
ariadne = "0.4"
ttf-parser = "0.21"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
unicode-width = "0.1"
wasm-bindgen = "=0.2.92"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
