[package]
name = "kozue-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kozue-ir.workspace = true
kozue-dsl.workspace = true
kozue-mermaid.workspace = true
kozue-plantuml.workspace = true
kozue-layout.workspace = true
kozue-render-svg.workspace = true
kozue-render-png.workspace = true
kozue-render-term.workspace = true
kozue-render-dot.workspace = true
kozue-render-drawio.workspace = true
kozue-render-excalidraw.workspace = true
wasm-bindgen.workspace = true
